--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,7 +1,6 @@
 .container {
     width: 1200px;
     max-width: 1200px;
-    background-color: bisque;
 }
 
 [class*="col"] {
@@ -71,7 +70,9 @@
 .col-offset-6 {
    margin-left: calc((100% / 12) * 6);
 } 
-
+.col-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+}
 .col-offset-8 {
     margin-left: calc((100% / 12) * 8);
 }
